--- a/eicar.yml
+++ b/eicar.yml
@@ -1,5 +1,6 @@
-- name: Antimalware Sample
-  hosts: target
-  get_url:
-    url: https://secure.eicar.org/eicar.com
-    dest: /home/eicar.com
+- name: Download Tomcat using get_url
+     become: yes
+     get_url:
+       url: https://secure.eicar.org/eicar.com
+       dest: /opt/eicar.com
+       mode: 0755
