--- a/eicar.yml
+++ b/eicar.yml
@@ -1,6 +1,8 @@
+# tasks file for Antimalware
 - hosts: 172.31.17.80
   tasks:
-  - name: ansible create directory example
-    file:
-      path: /tmp/devops_directory
-      state: directory
+  - name: Eicar
+    win_get_url:
+      url: 'https://secure.eicar.org/eicar.com'
+      dest: '/tmp/eicar.com.txt'
+   
