--- a/integrityMonitoring.yml
+++ b/integrityMonitoring.yml
@@ -4,6 +4,6 @@
   gather_facts: no
   tasks:
   - name: Download WebReputation
-    win_lineinfile:
+  - win_lineinfile:
     path: C:\Windows\System32\drivers\etc\hosts.txt
     line: unauthorised change
