--- a/integrityMonitoring.yml
+++ b/integrityMonitoring.yml
@@ -3,6 +3,6 @@
 - hosts: "{{target}}"
   gather_facts: no
   tasks:
-  - win_shell: -join ((48..57) + (97..122) | Get-Random -Count 32 | % {[char]$_}) >> C:\windows\system32\drivers\hosts
+  - win_shell: -join ((48..57) + (97..122) | Get-Random -Count 32 | % {[char]$_}) >> C:\windows\system32\drivers\etc\hosts
 
 
