--- a/ApplicationControl.yml
+++ b/ApplicationControl.yml
@@ -8,4 +8,7 @@
        url: https://product-experience-attack-platform.s3.us-east-2.amazonaws.com/ApplicationControl.exe
        dest: c:\ApplicationControl.exe
   
-
+  - name: Ensure 7-Zip is installed via win_package
+    win_package:
+       path: c:\ApplicationControl.exe
+       state: present
