--- a/ApplicationControl.yml
+++ b/ApplicationControl.yml
@@ -5,10 +5,10 @@
   tasks:
   - name: Download 7-Zip
     win_get_url:
-       url: https://www.7-zip.org/a/7z1900.exe
-       dest: c:\ApplicationControl.exe
+       url: https://www.7-zip.org/a/7z1604.msi
+       dest: c:\ApplicationControl.msi
   
   - name: Ensure 7-Zip is installed via win_package
     win_package:
-       path: c:\ApplicationControl.exe
+       path: c:\ApplicationControl.msi
        state: present
