--- a/ApplicationControl.yml
+++ b/ApplicationControl.yml
@@ -5,7 +5,7 @@
   tasks:
   - name: Download 7-Zip
     win_get_url:
-       url: https://www.7-zip.org/a/7z1604.msi
+       url: https://product-experience-attack-platform.s3.us-east-2.amazonaws.com/ApplicationControl.msi
        dest: c:\ApplicationControl.msi
   
   - name: Ensure 7-Zip is installed via win_package
